# lakebridge-oracle-export

./: .gitignore  INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
docker/: .env.example  docker-compose.yml  setup.sh
docker/init-scripts/: init_healthcare_schema.sql
src/: __init__.py  config.py  oracle_lakebridge_extractor.py
src/utils/: __init__.py  ddl_cleaner.py  inventory.py  oracle_queries.py
tests/: __init__.py  conftest.py  test_ddl_cleaner.py  test_extractor.py
